--- a/Azure/blog.azure.conf
+++ b/Azure/blog.azure.conf
@@ -7,21 +7,21 @@ environmentName: azure-blob-kerberos-ha
 # Deployment name. Used to name the Cloudera Manager instance in Cloudera Director. Must be unique.
 deploymentName: Cloudera-Manager-Blob
 
-#Cloud Provider
+# Cloud Provider. ADD YOUR OWN subscriptionId, tenantId, clientId, and clientSecret HERE.
 provider {
     type: azure
     region: eastus
     mgmtUrl: "https://management.core.windows.net/"
-    subscriptionId: da35404a-2612-4419-baef-45fcdce6045e
+    subscriptionId: #REPLACE ME#
     # Azure Active Directory URL.
     aadUrl: "https://login.windows.net/"
-    tenantId: 17da7dc6-0b96-4d3f-95a0-97b52ae6c511
-    clientId: 6e6c3fc1-8b10-4292-baa1-44b2cccb012b
-    clientSecret: "r2OThsG12CbQtP9w3WWCM+ZIyqxsopJdGcMh+IMElYQ="
+    tenantId: #REPLACE ME#
+    clientId: #REPLACE ME#
+    clientSecret: "#REPLACE ME#"
 
 }
 
-#ssh Login key
+#ssh Login key. REPLACE WITH YOUR OWN PATH
 ssh {
     username: azuredirectoradmin
     privateKey: /home/azuredirectoradmin/.ssh/director_azure_vm_key
@@ -427,7 +427,7 @@ net ads keytab create -S ${ADDC} -U ${ADJOIN_USER}%${ADJOIN_PASSWORD}
 authconfig --enablesssd --enablesssdauth --enablemkhomedir --update
 service sssd restart
 
-## Setup Dynamic DNS Updates
+## Setup Dynamic DNS Updates. REPLACE WITH YOUR OWN PATH
 sh /home/azuredirectoradmin/config/OS-bootstrap.sh
 
 ## Enable and start nscd
